--- a/styles.css
+++ b/styles.css
@@ -145,4 +145,7 @@
         padding-bottom: 40px;
         margin-bottom: 40px;
     }
+    .enter-block_agreement-text {
+        font-size: 14px;
+    }
 }
