--- a/src/HomePage01/HomePage01.scss
+++ b/src/HomePage01/HomePage01.scss
@@ -22,6 +22,7 @@ $blue-accent: #377DFF;
 .page {
     width: 75%;
     margin-left: 12.5%;
+    margin-right: 12.5%;
 }
 
 .offer {
@@ -36,8 +37,10 @@ $blue-accent: #377DFF;
     padding: 0% 12.5% 0% 12.5%;
 }
 .offer_center {
-    @extend .offer;
-    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 30%;
 }
 .offer_close {
     font-size: 28px;
@@ -126,7 +129,11 @@ $blue-accent: #377DFF;
     @include flex-row;
     @include thin;
 }
-
+.rooms-cards_sub {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .new-arrivals {
     display: flex;
     flex-direction: column;
@@ -267,15 +274,19 @@ $blue-accent: #377DFF;
 .info2 {
     display: flex;
     flex-direction: row;
+    width: 100%;
+}
+
+.info2_img {
+    width: 50%;
 }
 
 .info2_offer {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    width: 30%;
     background-color: $info-background;
-    padding: 100px 160px 100px 72px;
+    padding: 8.33% 8.33% 5.2% 5.2%;
 }
 .info2_offer-sale-up {
     font-family: Inter;
@@ -311,7 +322,7 @@ $blue-accent: #377DFF;
     }
 }
 .articles {
-    padding: 80px 160px 80px 160px;
+    padding: 4.16% 10% 4.16% 10%;
 }
 .articles_header {
     font-family: Poppins;
@@ -329,6 +340,7 @@ $blue-accent: #377DFF;
 .articles_item {
     display: flex;
     flex-direction: column;
+    width: 31.23%;
     gap: 12px;
 }
 .articles_name {
@@ -352,6 +364,10 @@ $blue-accent: #377DFF;
 }
 .newsletter {
     position: relative;
+    bottom: -2%;
+}
+.newsletter_img {
+    width: 100%;
 }
 .newsletter_block {
     position: absolute;
