--- a/src/HomePage01/HomePage01.scss
+++ b/src/HomePage01/HomePage01.scss
@@ -104,6 +104,7 @@ $blue-accent: #377dff;
 .slider {
   @include thin;
   position: relative;
+  overflow: hidden;
 }
 .slide_img {
   width: 100%;
@@ -133,13 +134,10 @@ $blue-accent: #377dff;
 @mixin slide_button {
   align-content: bottom;
   position: absolute;
-  text-align: center;
   border-radius: 50%;
-  font-size: 36px;
-  font-family: Poppins;
   background-color: $info-background;
-  width: 3.5%;
-  height: 9.45%;
+  width: 3%;
+  height: 8.1%;
   top: 45.275%;
 }
 
@@ -158,6 +156,28 @@ $blue-accent: #377dff;
   img {
     height: 100%;
   }
+}
+.slide_indicator {
+  position: absolute;
+  bottom: 5%;
+  width: 77.7%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+}
+.slide_indicator-light {
+  border: 2px solid rgba(255, 255, 255, 0.75);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+}
+.slide_indicator-shadow {
+  border: 2px solid rgba(255, 255, 255, 0.75);
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
 }
 .description {
   @include flex-row;
@@ -492,18 +512,12 @@ $blue-accent: #377dff;
   }
 }
 .newsletter {
-  position: relative;
-  bottom: -2%;
-}
-.newsletter_img {
-  width: 100%;
+  background-image: url("../../public/newsletter.png");
+  background-size: cover;
+  padding: 7.05% 33% 7.05% 33%;
 }
 .newsletter_block {
-  position: absolute;
-  top: 25%;
-  left: 33%;
-  text-align: center;
-  width: 34%;
+  background-color: rgba(0, 0, 0, 0);
 }
 .newsletter_text {
   display: flex;
@@ -515,7 +529,7 @@ $blue-accent: #377dff;
   font-size: 40px;
   font-weight: 500;
   line-height: 44px;
-  letter-spacing: -0.4;
+  letter-spacing: -0.4px;
 }
 .newsletter_desc {
   font-family: Inter;
@@ -684,19 +698,24 @@ $blue-accent: #377dff;
   .info2 {
     flex-direction: column;
   }
+  .info2_img {
+    width: 100%;
+  }
   .info2_offer {
     padding: 10% 5% 5% 5%;
     width: auto;
   }
   .articles {
-    padding: 5%;
+    padding: 12.5%;
+  }
+  .articles_item {
+    width: 100%;
   }
   .articles_block {
     flex-direction: column;
     gap: 20px;
   }
   .newsletter {
-    background: #f2f4f6;
   }
   .newsletter_img {
     display: none;
