Add some new elements to second page

--- a/src/HomePage01.scss
+++ b/src/HomePage01.scss
@@ -101,82 +101,6 @@ $blue-accent: #377dff;
   font-size: 12px;
   font-weight: 700;
 }
-.slider {
-  @include thin;
-  position: relative;
-  overflow: hidden;
-}
-.slide_carousel-imgs {
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  flex-shrink: 0;
-  transition: transform 1s cubic-bezier(0.37, 0, 0.63, 1);
-}
-.slide_filter-left {
-  background-color: white;
-  width: 27.8%;
-  height: 560px;
-  position: absolute;
-  margin-left: -27.8%;
-  z-index: 10;
-}
-.slide_filter-right {
-  background-color: white;
-  width: 27.8%;
-  height: 560px;
-  position: absolute;
-  margin-left: 78%;
-  z-index: 10;
-}
-@mixin slide_button {
-  align-content: bottom;
-  position: absolute;
-  border-radius: 50%;
-  background-color: $info-background;
-  width: 3%;
-  height: 8.1%;
-  top: 45.275%;
-}
-
-.slide_button-left {
-  @include slide_button;
-  color: $secondary-color;
-  left: 13%;
-  img {
-    height: 100%;
-  }
-}
-.slide_button-right {
-  @include slide_button;
-  color: #141718;
-  right: 13%;
-  img {
-    height: 100%;
-  }
-}
-.slide_indicator {
-  position: absolute;
-  bottom: 5%;
-  width: 77.7%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 5px;
-}
-.slide_indicator-light {
-  border: 2px solid rgba(255, 255, 255, 0.75);
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 50%;
-  width: 15px;
-  height: 15px;
-}
-.slide_indicator-shadow {
-  border: 2px solid rgba(255, 255, 255, 0.75);
-  border-radius: 50%;
-  width: 15px;
-  height: 15px;
-}
 .description {
   @include flex-row;
   @include thin;
@@ -208,184 +132,6 @@ $blue-accent: #377dff;
   font-weight: 600;
   color: $secondary-label;
 }
-.rooms-cards {
-  @include flex-row;
-  @include thin;
-}
-.rooms-cards_main {
-  position: relative;
-}
-.rooms-cards_main-text {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 11.4%;
-  font-family: Poppins;
-  font-size: 34px;
-  font-weight: 500;
-  line-height: 38px;
-  letter-spacing: -0.6px;
-  top: 7%;
-  left: 8.6%;
-}
-.rooms-cards_link {
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 28px;
-  letter-spacing: -0.4px;
-  border-bottom: solid 0.2px black;
-  width: 5em;
-}
-.rooms-cards_sub {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.rooms-cards_sub-item {
-  position: relative;
-}
-.rooms-cards_sub-text {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24.5%;
-  font-family: Poppins;
-  font-size: 34px;
-  font-weight: 500;
-  line-height: 38px;
-  letter-spacing: -0.6px;
-  top: 62%;
-  left: 6%;
-}
-.new-arrivals {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 48px;
-  padding-top: 48px;
-  @include thin;
-}
-
-.new-arrivals_img {
-  position: relative;
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 16px;
-}
-
-.new-arrivals_img-info {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-}
-
-.new-arrivals_new {
-  text-align: center;
-  padding: 4px 14px 4px 14px;
-  margin-bottom: 4px;
-  width: 43px;
-}
-
-.new-arrivals_discount {
-  background-color: $discount-color;
-  color: white;
-  border-radius: 4px;
-  padding: 4px 14px 4px 14px;
-  margin-bottom: 4px;
-}
-
-.new-arrivals_text {
-  @include flex-row;
-  align-items: end;
-  font-weight: 500;
-  letter-spacing: -0.4;
-}
-
-.new-arrivals_text-item1 {
-  width: 20%;
-  font-family: Poppins;
-  font-size: 40px;
-  line-height: 44px;
-}
-
-.new-arrivals_add-button {
-  opacity: 0;
-  position: absolute;
-  bottom: 5%;
-  left: 5%;
-  font-weight: 500;
-  text-align: center;
-  align-content: center;
-  border-radius: 10px;
-  background-color: #141718;
-  color: $info-background;
-  width: 90%;
-  height: 12.5%;
-  transition: opacity 200ms, background-color 600ms;
-  &:hover {
-    background-color: #3b3f41;
-  }
-  &:active {
-    background-color: #acb6bb;
-  }
-}
-
-.new-arrivals_text-item2 {
-  font-family: Inter;
-  font-size: 16px;
-  line-height: 28px;
-  &:link {
-    color: black;
-  }
-  &:visited {
-    color: $secondary-color;
-  }
-}
-
-.new-arrivals_goods {
-  @include flex-row;
-  gap: 24px;
-  overflow-x: scroll;
-  padding-bottom: 48px;
-}
-
-.new-arrivals_goods-item {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.new-arrivals_description {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  font-family: Inter;
-  font-weight: 600;
-}
-
-.new-arrivals_name {
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.new-arrivals_price {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  font-size: 14px;
-  line-height: 22px;
-}
-
-.new-arrivals_price-old {
-  color: $secondary-color;
-  font-weight: 400;
-  text-decoration: line-through;
-}
-
 .pros {
   @include flex-row;
   padding: 48px 160px 48px 160px;
@@ -699,10 +445,10 @@ $blue-accent: #377dff;
     line-height: 22px;
     padding-right: 0;
   }
-  .rooms-cards {
+  .collection {
     flex-direction: column;
   }
-  .rooms-cards_img {
+  .collection_img {
     width: 100%;
   }
   .new-arrivals_text-item2 {
