--- a/src/Components/NewArrivals/NewArrivals.scss
+++ b/src/Components/NewArrivals/NewArrivals.scss
@@ -98,7 +98,8 @@ $blue-accent: #377dff;
 }
 
 .new-arrivals_goods {
-  @include flex-row;
+  display: flex;
+  flex-direction: row;
   gap: 24px;
   overflow-x: scroll;
   padding-bottom: 48px;
@@ -108,6 +109,7 @@ $blue-accent: #377dff;
   display: flex;
   flex-direction: column;
   gap: 12px;
+  width: 23%;
 }
 
 .new-arrivals_description {
