--- a/src/HomePage02.scss
+++ b/src/HomePage02.scss
@@ -1,5 +1,6 @@
-$info-background: #141718;
+$offer-background: #141718;
 $font-color: #f3f5f7;
+$info-background: #f3f5f7;
 $head-font-color: #141718;
 $main-head-color: rgba(255, 171, 0, 0.64);
 $secondary-color: #6c7275;
@@ -31,7 +32,7 @@ $blue-accent: #377dff;
 .offer {
   @include flex-row;
   align-items: center;
-  background: $info-background;
+  background: $offer-background;
   color: $font-color;
   font-family: Inter;
   font-size: 14px;
@@ -41,7 +42,8 @@ $blue-accent: #377dff;
   padding: 0% 12.5% 0% 12.5%;
 }
 .offer_img {
-  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(240deg) brightness(105%) contrast(103%);
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(240deg)
+    brightness(105%) contrast(103%);
 }
 .offer_link {
   color: $main-head-color;
@@ -84,7 +86,7 @@ $blue-accent: #377dff;
   text-align: left;
 }
 .head_section {
-  color: $info-background;
+  color: $offer-background;
   transition: color, 0.2s;
   &:hover {
     color: $font-color;
@@ -98,7 +100,8 @@ $blue-accent: #377dff;
 .head_button {
   transition: filter, 0.2s;
   &:hover {
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(240deg) brightness(105%) contrast(103%);
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(240deg)
+      brightness(105%) contrast(103%);
   }
 }
 .head_cart {
@@ -149,7 +152,7 @@ $blue-accent: #377dff;
   line-height: 32px;
 }
 .promo_button {
-  background-color: $info-background;
+  background-color: $offer-background;
   color: white;
   border-radius: 8px;
   width: 40%;
@@ -179,12 +182,6 @@ $blue-accent: #377dff;
 .logos_item {
   width: 15%;
 }
-
-
-
-
-
-
 
 
 .description {
@@ -440,7 +437,7 @@ $blue-accent: #377dff;
   width: 85%;
 }
 
-.newsletter_form-right{
+.newsletter_form-right {
   width: 15%;
 }
 
@@ -452,7 +449,7 @@ $blue-accent: #377dff;
   line-height: 28px;
   letter-spacing: -0.4px;
   width: 90%;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   &:focus {
     outline: none;
   }
