Replace frontend to its own folder
Also index.html has been replaced to
frontend/public folder

--- a/frontend/src/HomePage02.scss
+++ b/frontend/src/HomePage02.scss
@@ -125,7 +125,7 @@ $blue-accent: #377dff;
 }
 .promo {
   position: relative;
-  background-image: url("../public/home_page2.svg");
+  background-image: url("../public/img/home_page2.svg");
   background-size: cover;
   height: 820px;
 }
@@ -393,7 +393,7 @@ $blue-accent: #377dff;
   }
 }
 .newsletter {
-  background-image: url("../public/newsletter.png");
+  background-image: url("../public/img/newsletter.png");
   background-size: cover;
   padding: 7.05% 33% 7.05% 33%;
 }
