--- a/frontend/src/Components/Collection/Collection.scss
+++ b/frontend/src/Components/Collection/Collection.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 11.4%;
   font-family: Poppins;
   font-size: 34px;
   font-weight: 500;
@@ -43,12 +42,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 24.5%;
   font-family: Poppins;
   font-size: 34px;
   font-weight: 500;
   line-height: 38px;
   letter-spacing: -0.6px;
-  top: 62%;
+  width: fit-content;
+  height: fit-content;
+  bottom: 12%;
   left: 6%;
 }
