--- a/frontend/src/Components/Head/Head.scss
+++ b/frontend/src/Components/Head/Head.scss
@@ -13,6 +13,7 @@ $secondary-color: #6c7275;
 }
 .head_logo {
   font-family: Poppins;
+  color: #141718;
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
