--- a/frontend/src/HomePage02.scss
+++ b/frontend/src/HomePage02.scss
@@ -28,6 +28,14 @@ $blue-accent: #377dff;
   margin-left: 12.5%;
   margin-right: 12.5%;
 }
+.page-header {
+  font-family: Poppins;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 44px;
+  letter-spacing: -0.4px;
+  padding: 3% 11.1% 3% 11.1%;
+}
 .promo {
   position: relative;
   background-image: url("../public/img/home_page2.svg");
@@ -87,7 +95,6 @@ $blue-accent: #377dff;
 .logos_item {
   width: 15%;
 }
-
 
 .description {
   @include flex-row;
