--- a/frontend/src/Components/Collection/Collection.scss
+++ b/frontend/src/Components/Collection/Collection.scss
@@ -52,3 +52,17 @@
   bottom: 12%;
   left: 6%;
 }
+
+@media screen and (max-width: 480px) {
+  .collection {
+    flex-direction: column;
+    gap: 24px;
+  }
+  .collection_main {
+    width: 100%;
+  }
+  .collection_sub {
+    width: 100%;
+    gap: 24px;
+  }
+}
