--- a/frontend/src/Components/Head/Head.scss
+++ b/frontend/src/Components/Head/Head.scss
@@ -61,3 +61,9 @@ $secondary-color: #6c7275;
   font-size: 12px;
   font-weight: 700;
 }
+
+@media screen and (max-width: 480px) {
+  .head_section-block {
+    display: none;
+  }
+}
