--- a/frontend/src/Components/TimePromo/TimePromo.scss
+++ b/frontend/src/Components/TimePromo/TimePromo.scss
@@ -71,3 +71,50 @@
   border-radius: 8px;
   width: 20%;
 }
+
+@media screen and (max-width: 480px) {
+  .time-promotion {
+    flex-direction: column-reverse;
+  }
+  .time-promotion_content {
+    padding: 5%;
+  }
+  .time-promotion_offer {
+    font-family: Poppins;
+    font-size: 34px;
+    font-weight: 500;
+    line-height: 38px;
+    letter-spacing: -0.6px;
+  }
+  .time-promotion_text {
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+  }
+  .time-promotion_timer-block {
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+  }
+  .time-promotion_timer {
+    grid-template-columns: repeat(4, 60px);
+    font-family: Poppins;
+    font-size: 34px;
+    font-weight: 500;
+    line-height: 38px;
+    letter-spacing: -0.6px;
+    text-align: center;
+  }
+  .time-promotion_card-text {
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  .time-promotion_button {
+    width: 35%;
+    padding: 2%;
+  }
+}
