--- a/frontend/src/HomePage01.scss
+++ b/frontend/src/HomePage01.scss
@@ -209,107 +209,11 @@ $blue-accent: #377dff;
   }
 }
 
-.footer {
-  display: flex;
-  flex-direction: column;
-  padding: 80px 160px 32px 160px;
-  gap: 49px;
-  color: white;
-  background-color: #141718;
-}
-
-.footer_company {
-  display: flex;
-  flex-direction: row;
-}
-
-.footer_navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.footer_company-logo {
-  font-family: Poppins;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 24px;
-  padding-right: 30px;
-  border-right: solid 0.5px #6c7275;
-}
-
-.footer_company-caption {
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  padding-left: 30px;
-}
-
-.footer_nav-buttons {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  a:link {
-    color: white;
-    text-decoration: none;
-  }
-  a:visited {
-    color: white;
-    text-decoration: none;
-  }
-}
-
-.footer_sources {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border-top: solid 0.5px #404446;
-  padding-top: 15px;
-}
-
-.footer_copyright {
-  display: flex;
-  flex-direction: row;
-  gap: 28px;
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 20px;
-}
-
-.footer_copyright-text {
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.footer_social {
-  display: flex;
-  flex-direction: row;
-  gap: 24px;
-}
-
-@media screen and (max-width: 1440px) and (orientation: portrait) {
-  .offer {
-    padding: 0;
-  }
-  .offer_center {
-    width: 90%;
-    gap: 2%;
-  }
+@media screen and (max-width: 480px) {
   .page {
     width: 100%;
     margin: 0;
     overflow: hidden;
-  }
-  .head_section-block {
-    display: none;
   }
   .slider {
     padding: 0;
@@ -335,24 +239,8 @@ $blue-accent: #377dff;
     line-height: 22px;
     padding-right: 0;
   }
-  .collection {
-    flex-direction: column;
-  }
-  .collection_img {
-    width: 100%;
-  }
   .new-arrivals_text-item2 {
     display: none;
-  }
-  .pros {
-    padding: 48px;
-    gap: 24px;
-    flex-wrap: wrap;
-  }
-  .pros_item {
-    width: 45%;
-    height: fit-content;
-    padding: 0;
   }
   .info2 {
     flex-direction: column;
@@ -374,8 +262,8 @@ $blue-accent: #377dff;
     flex-direction: column;
     gap: 20px;
   }
-  .newsletter_img {
-    display: none;
+  .newsletter {
+    padding: 0;
   }
   .newsletter_block {
     position: static;
@@ -384,37 +272,12 @@ $blue-accent: #377dff;
     width: auto;
     padding: 5%;
   }
-  .footer {
-    padding: 5%;
-    background: #232627;
-  }
-  .footer_navigation,
-  .footer_company {
-    flex-direction: column;
-  }
-  .footer_company-logo {
-    text-align: center;
-    padding-right: 0;
-    padding-bottom: 10px;
-    border-right: 0;
-    border-bottom: solid 0.5px #6c7275;
-  }
-  .footer_company-caption {
-    padding: 10px 0px 0px 0px;
-    text-align: center;
-  }
-  .footer_nav-buttons {
-    padding-top: 40px;
-    flex-direction: column;
-    text-align: center;
-  }
-  .footer_sources {
-    gap: 20px;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-  .footer_copyright {
-    align-items: center;
-    flex-direction: column-reverse;
+  .newsletter_form-right {
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -0.4px;
+    text-align: left;
   }
 }
