--- a/frontend/src/HomePage02.scss
+++ b/frontend/src/HomePage02.scss
@@ -36,56 +36,6 @@ $blue-accent: #377dff;
   letter-spacing: -0.4px;
   padding: 3% 11.1% 3% 11.1%;
 }
-.promo {
-  position: relative;
-  background-image: url("../public/img/home_page2.svg");
-  background-size: cover;
-  height: 820px;
-}
-.promo_content {
-  position: absolute;
-  width: 538px;
-  top: 30%;
-  left: 60%;
-}
-.promo_main-text {
-  font-family: Poppins;
-  font-size: 80px;
-  font-weight: 500;
-  line-height: 84px;
-  letter-spacing: -3px;
-}
-.promo_main-text__accent {
-  color: $blue-accent;
-}
-.promo_sub-text {
-  font-family: Inter;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 32px;
-}
-.promo_button {
-  background-color: $offer-background;
-  color: white;
-  border-radius: 8px;
-  width: 40%;
-  margin-top: 3%;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  text-align: center;
-  font-family: Inter;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 32px;
-  letter-spacing: -0.4px;
-  transition: background-color, 0.2s;
-  &:hover {
-    background-color: rgba(20, 23, 24, 0.75);
-  }
-  &:active {
-    background-color: rgba(20, 23, 24, 0);
-  }
-}
 .logos {
   display: flex;
   flex-direction: row;
@@ -272,274 +222,12 @@ $blue-accent: #377dff;
 }
 .newsletter {
   background-image: url("../public/img/newsletter.png");
-  background-size: cover;
-  padding: 7.05% 33% 7.05% 33%;
-}
-.newsletter_block {
-  background-color: rgba(0, 0, 0, 0);
-}
-.newsletter_text {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.newsletter_header {
-  font-family: Poppins;
-  font-size: 40px;
-  font-weight: 500;
-  line-height: 44px;
-  letter-spacing: -0.4px;
-}
-.newsletter_desc {
-  font-family: Inter;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 30px;
-  padding-bottom: 20px;
-}
-.newsletter_form {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-bottom: solid 0.5px #afb3b5;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  color: $secondary-color;
-  width: 100%;
 }
 
-.newsletter_form-left {
-  display: flex;
-  flex-direction: row;
-  gap: 2.5%;
-  width: 85%;
-}
-
-.newsletter_form-right {
-  width: 15%;
-}
-
-.newsletter_form-input {
-  border: 0;
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 28px;
-  letter-spacing: -0.4px;
-  width: 90%;
-  background-color: rgba(0, 0, 0, 0);
-  &:focus {
-    outline: none;
-  }
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  gap: 49px;
-  color: white;
-  background-color: #141718;
-  padding-left: 12.5%;
-  padding-right: 9.8%;
-}
-
-.footer_company {
-  display: flex;
-  flex-direction: row;
-}
-
-.footer_navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.footer_company-logo {
-  font-family: Poppins;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 24px;
-  padding-right: 30px;
-  border-right: solid 0.5px #6c7275;
-}
-
-.footer_company-caption {
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  padding-left: 30px;
-}
-
-.footer_nav-buttons {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  a:link {
-    color: white;
-    text-decoration: none;
-  }
-  a:visited {
-    color: white;
-    text-decoration: none;
-  }
-}
-
-.footer_sources {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border-top: solid 0.5px #404446;
-  padding-top: 15px;
-}
-
-.footer_copyright {
-  display: flex;
-  flex-direction: row;
-  gap: 28px;
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 20px;
-}
-
-.footer_copyright-text {
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.footer_social {
-  display: flex;
-  flex-direction: row;
-  gap: 24px;
-}
-
-@media screen and (max-width: 1440px) and (orientation: portrait) {
-  .offer {
-    padding: 0;
-  }
-  .offer_center {
-    width: 90%;
-    gap: 2%;
-  }
+@media screen and (max-width: 480px) {
   .page {
     width: 100%;
     margin: 0;
     overflow: hidden;
-  }
-  .head_section-block {
-    display: none;
-  }
-  .slider {
-    padding: 0;
-    margin-right: 11.1%;
-    margin-left: 11.1%;
-  }
-  .slide_button-left {
-    display: none;
-  }
-  .slide_button-right {
-    display: none;
-  }
-  .description {
-    flex-direction: column;
-  }
-  .description_item1 {
-    font-size: 40px;
-    line-height: 44px;
-    letter-spacing: -0.4px;
-  }
-  .description_item2 {
-    font-size: 14px;
-    line-height: 22px;
-    padding-right: 0;
-  }
-  .rooms-cards {
-    flex-direction: column;
-  }
-  .rooms-cards_img {
-    width: 100%;
-  }
-  .new-arrivals_text-item2 {
-    display: none;
-  }
-  .pros {
-    padding: 48px;
-    gap: 24px;
-    flex-wrap: wrap;
-  }
-  .pros_item {
-    width: 45%;
-    height: fit-content;
-    padding: 0;
-  }
-  .info2 {
-    flex-direction: column;
-  }
-  .info2_img {
-    width: 100%;
-  }
-  .info2_offer {
-    padding: 10% 5% 5% 5%;
-    width: auto;
-  }
-  .articles {
-    padding: 12.5%;
-  }
-  .articles_item {
-    width: 100%;
-  }
-  .articles_block {
-    flex-direction: column;
-    gap: 20px;
-  }
-  .newsletter_img {
-    display: none;
-  }
-  .newsletter_block {
-    position: static;
-    top: 0;
-    left: 0;
-    width: auto;
-    padding: 5%;
-  }
-  .footer {
-    padding: 5%;
-    background: #232627;
-  }
-  .footer_navigation,
-  .footer_company {
-    flex-direction: column;
-  }
-  .footer_company-logo {
-    text-align: center;
-    padding-right: 0;
-    padding-bottom: 10px;
-    border-right: 0;
-    border-bottom: solid 0.5px #6c7275;
-  }
-  .footer_company-caption {
-    padding: 10px 0px 0px 0px;
-    text-align: center;
-  }
-  .footer_nav-buttons {
-    padding-top: 40px;
-    flex-direction: column;
-    text-align: center;
-  }
-  .footer_sources {
-    gap: 20px;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-  .footer_copyright {
-    align-items: center;
-    flex-direction: column-reverse;
   }
 }
