--- a/frontend/src/Components/Head/Head.scss
+++ b/frontend/src/Components/Head/Head.scss
@@ -2,6 +2,9 @@ $info-background: #f3f5f7;
 $secondary-color: #6c7275;
 
 .head {
+  position: sticky;
+  top: 0;
+  z-index: 20;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,6 +20,9 @@ $secondary-color: #6c7275;
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
+}
+.head_menu {
+  display: none;
 }
 .head_section-block {
   display: flex;
@@ -63,6 +69,16 @@ $secondary-color: #6c7275;
 }
 
 @media screen and (max-width: 480px) {
+  .head_logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10%;
+  }
+  .head_menu {
+    display: block;
+    height: 18px;
+  }
   .head_section-block {
     display: none;
   }
