--- a/frontend/src/Components/FlyMenu/FlyMenu.scss
+++ b/frontend/src/Components/FlyMenu/FlyMenu.scss
@@ -27,7 +27,7 @@
         display: grid;
         grid-template-columns: auto 1fr;
         grid-gap: 2%;
-        padding: 2.5%;
+        padding: 5%;
         border-radius: 10px;
         border: 1px solid rgba(120, 120, 120, 0.5);
     }
@@ -37,5 +37,17 @@
         &:focus {
             outline: 0;
         }
+    }
+    .fly-menu_item {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-family: Inter;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 24px;
+        height: 32px;
+        border-bottom: 1px solid #E8ECEF;
     }
 }
