--- a/frontend/src/Components/Pros/Pros.scss
+++ b/frontend/src/Components/Pros/Pros.scss
@@ -12,7 +12,7 @@ $sub_color: #6c7275;
 .pros_item {
   background-color: $pros_background;
   width: 36.4%;
-  padding: 48px 32px 48px 32px;
+  padding: 6.5% 4.5% 6.5% 4.5%;
   font-family: Poppins;
 }
 
