--- a/frontend/src/HomePage02.scss
+++ b/frontend/src/HomePage02.scss
@@ -98,7 +98,7 @@ $blue-accent: #377dff;
   left: 6%;
 }
 .newsletter {
-  background-image: url("../public/img/newsletter.png");
+  background-image: url("img/newsletter.png");
 }
 
 @media screen and (max-width: 480px) {
