--- a/frontend/src/Login/login.scss
+++ b/frontend/src/Login/login.scss
@@ -15,7 +15,7 @@
   position: relative;
 }
 .enter-page_logo-img {
-  background: url("../../public/img/main_img_left.svg");
+  background: url("../img/main_img_left.svg");
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
@@ -75,10 +75,14 @@
 }
 .enter-block_form-field {
   border: 0;
-  border-bottom: 1px solid #e8ecef;
+  border-bottom: 2px solid #e8ecef;
   height: 40px;
+  transition: border-bottom 0.5s;
+  &:focus{
+    outline: none;
+    border-bottom: 2px solid black;
+  }
 }
-
 .enter-block_agreement {
   display: flex;
   flex-direction: row;
@@ -124,7 +128,7 @@
   background-color: #7d542e;
 }
 
-@media screen and (max-width: 480px)  {
+@media screen and (max-width: 640px)  {
   .enter-page {
     flex-direction: column;
     width: 100%;
@@ -137,7 +141,7 @@
     content: "";
   }
   .enter-page_logo-img {
-    background-image: url("../../public/img/main_img_top.svg");
+    background-image: url("../img/main_img_top.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
