--- a/frontend/src/Cart.scss
+++ b/frontend/src/Cart.scss
@@ -5,5 +5,15 @@
     line-height: 58px;
     letter-spacing: -1px;
     text-align: center;
-    padding: 7% 14% 7% 14%;
+    width: 77.8%;
+    margin: 0 11.1% 0 11.1%;
+}
+.cart-text {
+    padding: 7% 14% 4% 14%;
+}
+.cart-content {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr;
+    grid-gap: 2.5%;
 }
